--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY: 968813468508.dkr.ecr.us-east-1.amazonaws.com/githubactions
+        ECR_REGISTRY: 968813468508.dkr.ecr.us-east-1.amazonaws.com
         ECR_REPOSITORY: githubactions
         IMAGE_TAG: Test_Github_1.0
       run: |
