--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,13 +36,13 @@ jobs:
       env:
         ECR_REGISTRY: 968813468508.dkr.ecr.us-east-1.amazonaws.com
         ECR_REPOSITORY: githubactions
-        IMAGE_TAG: Test_Github_1.0.0
+        IMAGE_TAG: Test_Github_1.0.1
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     - name: Send mail
       if: always()
-      uses: Prasadfasi/GitHub-Actions/actions@latest
+      uses: Prasadfasi/GitHub-Actions/actions@v2
       with:
         server_address: smtp.gmail.com
         server_port: 465
