--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,7 +42,7 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     - name: Send mail
       if: always()
-      uses: Prasadfasi/GitHub-Actions/actions@v2.0
+      uses: Prasadfasi/GitHub-Actions/actions@V2.0
       with:
         server_address: smtp.gmail.com
         server_port: 465
