--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,3 +40,16 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+   - name: Send mail
+       if: always()
+       uses: Prasadfasi/GitHub-Actions/actions@v2
+       with:
+       server_address: smtp.gmail.com
+       server_port: 465
+       username: ${{ secrets.EMAIL_USERNAME }}
+       password: ${{ secrets.EMAIL_PASSWORD }}
+       subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+       body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+       to: fasireddygmail.com
+       from: Prasad
+    
