--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,9 +48,9 @@ jobs:
       with:
         server_address: smtp.gmail.com
         server_port: 465
-        username: ${{ secrets.EMAIL_USERNAME }}
-        password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-        body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+        username: ${ secrets.EMAIL_USERNAME }
+        password: ${ secrets.EMAIL_PASSWORD }
+        subject: ${ github.job } job of ${ github.repository } has ${ job.status }
+        body: ${ github.job } job in worflow ${ github.workflow } of ${ github.repository } has ${ job.status }
         to: fasireddygmail.com
         from: Prasad
