--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,13 +20,13 @@ jobs:
       uses: kitabisa/sonarqube-action@v1.2.0
       with:
         host: http://18.116.48.180:9000
-        login: ${ SONAR }
+        login: ${{ SONAR }}
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${ AWSKEYID }
-        aws-secret-access-key: ${ SECRETACCES }
+        aws-access-key-id: ${{ AWSKEYID }}
+        aws-secret-access-key: ${{ SECRETACCES }}
         aws-region: us-east-1
 
     - name: Login to Amazon ECR
